tweaked layout bugs and added basic color scheme

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,10 +14,42 @@ body{
     margin-top: 6rem;
 }
 
+.custom-btn-white{
+    color: #163ef2;
+    background-color: #f8f9fa;
+    font-weight: bold;
+    border: 4px solid #163ef2;
+   
+}
+
+.custom-btn-blue{
+    background-color: #163ef2;
+    color: #f8f9fa;
+    font-weight: bold;
+    border: 4px solid #f8f9fa;
+}
+
 #outer{
+    transform: skew(0, -20deg);
+    margin-top: -300px;
+    background-color: #163ef2;
+   
+}
+
+#middle{
    height: 100vh;
    display: flex;
+   align-items: center;
+   transform: skew(0, 20deg);
+   }
+
+#inner{
+  margin-top: 567.5px; ;
 }
-#frontContainer{
-    
-}
+
+
+@media only screen and (max-width: 576px) {
+    #inner {
+      margin-top: 80vh;
+    }
+  }
